# xreflect

./: Cargo.toml  README.md  bbb.rs
examples/: demo.rs
src/: lib.rs
tests/: basic_derive.rs  demo.rs  manual.rs  manual_enum.rs  manual_generic_struct.rs
xreflect-core/: Cargo.toml
xreflect-core/src/: builder.rs  enum_reflect.rs  lib.rs  reflect.rs  struct_reflect.rs  types.rs
xreflect-proc-macro/: Cargo.toml
xreflect-proc-macro/src/: lib.rs  reflect_enum.rs  reflect_struct.rs  wrapper_types.rs
