[package]
name = "xreflect"
version = "0.1.0"
authors = ["hydrogenmacro <hydrogenmacro@gmail.com>"]
description = "Quick and easy reflection"
keywords = ["reflect", "reflection"]
edition = "2021"

[dependencies]
xreflect-core = { path = "xreflect-core" }
xreflect-proc-macro = { path = "xreflect-proc-macro" }